--- a/pdbdrop/templates/upload.html
+++ b/pdbdrop/templates/upload.html
@@ -1,6 +1,39 @@
+{% load bootstrap3 %}
 
-<form method="POST" action="" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" name="Submit">
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>pdbdrop</title>
+    <link rel="stylesheet" type="text/css" href="/static/flatly.min.css">
+</head>
+<body>
+
+<div class="container" style="padding: 2em 0;">
+    <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+
+            <div class="jumbotron">
+                <h1>pdbdrop</h1>
+                <p>pdb2movie web GUI</p>
+            </div>
+
+            {% bootstrap_messages %}
+
+            <form method="POST" action="" class="form" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                {% buttons %}
+                    <button type="submit" class="btn btn-primary btn-block">
+                        {% bootstrap_icon "floppy-open" %} Upload
+                    </button>
+                {% endbuttons %}
+            </form>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="/static/jquery-3.2.1.slim.min.js"></script>
+<script type="text/javascript" src="/static/bootstrap.min.js"></script>
+
+</body>
+</html>
