--- a/pdbdrop/templates/upload.html
+++ b/pdbdrop/templates/upload.html
@@ -4,11 +4,14 @@
 <html>
 <head>
     <title>pdbdrop</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/static/flatly.min.css">
 </head>
 <body>
 
-<div class="container" style="padding: 2em 0;">
+<div class="container" style="padding-top: 2em;padding-bottom: 2em;">
     <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3">
 
